--- a/index.html
+++ b/index.html
@@ -1,7 +1,20 @@
 <html>
-    
-<h1> Hello World </h1>
-<h2> Levon's Website</h2>
-<h3>Small world</h3>
-<a href="https://birthday.example.com/">Link</a>
+    <header>
+        <title>Levon's Website</title>
+    </header>
+
+    <body>
+        <center>
+            <h1>Website!</h1>
+            <img src="https://upload.wikimedia.org/wikipedia/commons/c/c3/NGC_4414_%28NASA-med%29.jpg" width="180px" height="120px">
+        </center>
+        
+        <hr><br><br>
+
+        <p>
+            8/20/23 -<br> We create an acount on AWS and github. We also learned about OSHA and how to be safe when engineering.<br>We started coding today as you can see.
+        </p>
+
+    </body>
+
 </html>
