--- a/index.html
+++ b/index.html
@@ -12,7 +12,7 @@
         <hr><br><br>
 
         <p>
-            8/20/23 -<br> We create an acount on AWS and github. We also learned about OSHA and how to be safe when engineering.<br>We started coding today as you can see.
+            8/20/23 -<br> We create an acount on AWS and github. We also learned about OSHA and how to be safe when engineering.<br>We started coding today as you can see. We learned about the engineering process and how its simmilar to the scientific process
         </p>
 
     </body>
