--- a/index.html
+++ b/index.html
@@ -6,7 +6,7 @@
     <body>
         <center>
             <h1>Website!</h1>
-            <img src="https://upload.wikimedia.org/wikipedia/commons/c/c3/NGC_4414_%28NASA-med%29.jpg" width="180px" height="120px">
+            <img src="blob:chrome-untrusted://media-app/28fba271-9333-41c6-8178-8497ae0db6ed" width="180px" height="120px">
         </center>
         
         <hr><br><br>
