--- a/index.html
+++ b/index.html
@@ -6,14 +6,22 @@
     <body>
         <center>
             <h1>Website!</h1>
-            <img src="pic3.jpeg" width="180px" height="120px">
+            <img src="pic3.jpeg" width="180px" height="180px">
         </center>
         
         <hr><br><br>
 
         <p>
-            8/20/23 -<br> We create an acount on AWS and github. We also learned about OSHA and how to be safe when engineering.<br>We started coding today as you can see. We learned about the engineering process and how its simmilar to the scientific process
+            8/20/23 -<br> We created an acount on AWS and github. We also learned about OSHA and how to be safe when engineering.<br>We started coding today as you can see. We learned about the engineering process and how its simmilar to the scientific process
         </p>
+        <br>
+        <br>
+<p>
+    8/28/23- <br> We took the safety quiz today.We also did a worksheet on how inventions changed our way of living. We started tinkercad<br> at first we played around with all the tools and stuff then we started a challenge which was to make a household<br> appliance and I made a hair dryer. We also started desinging our Ruth goldberg machines.
+</p>
+
+
+
 
     </body>
 
