--- a/index.html
+++ b/index.html
@@ -19,8 +19,9 @@
 <p>
     8/28/23- <br> We took the safety quiz today.We also did a worksheet on how inventions changed our way of living. We started tinkercad<br> at first we played around with all the tools and stuff then we started a challenge which was to make a household<br> appliance and I made a hair dryer. We also started desinging our Ruth goldberg machines.
 </p>
-
-
+<right>
+<img src="pic4.jpeg" width="120" height="120">
+</right>
 
 
     </body>
