--- a/index.html
+++ b/index.html
@@ -19,11 +19,14 @@
 <p>
     8/28/23- <br> We took the safety quiz today.We also did a worksheet on how inventions changed our way of living. We started tinkercad<br> at first we played around with all the tools and stuff then we started a challenge which was to make a household<br> appliance and I made a hair dryer. We also started desinging our Ruth goldberg machines.
 </p>
-<right>
+<marquee>
+    
 <img src="pic4.jpeg" width="120" height="120">
-</right>
-
-
+</marquee>
+<p>
+    9/4/23- <br> We finshed our tinkercad Rube Goldberg machine using simple machines. We also finsihed our Mechanical engineering worksheet,<br> we also watched a crash couse on the history of engineering. We took a quiz on the mechanical engineering worksheet.
+</p>
+<img src="pic5.png" width="200" height="250">
     </body>
 
 </html>
