--- a/index.html
+++ b/index.html
@@ -19,13 +19,15 @@
 <p>
     8/28/23- <br> We took the safety quiz today.We also did a worksheet on how inventions changed our way of living. We started tinkercad<br> at first we played around with all the tools and stuff then we started a challenge which was to make a household<br> appliance and I made a hair dryer. We also started desinging our Ruth goldberg machines.
 </p>
-    <marquee behavior="scroll" direction="left" scrollamount="20">Fast Scrolling
+    <marquee behavior="scroll" direction="left" scrollamount="20">
     <img src="pic4.jpeg" width="300" height="200">
     </marquee>
 <p>
     9/4/23- <br> We finshed our tinkercad Rube Goldberg machine using simple machines. We also finsihed our Mechanical engineering worksheet,<br> we also watched a crash couse on the history of engineering. We took a quiz on the mechanical engineering worksheet.
 </p>
-<img src="pic5.png" width="200" height="300">
+<marquee behavior="scroll" direction="left" scrollamount="20">
+<img src="pic5.png" width="400" height="300">
+ </marquee>
     </body>
 
 </html>
