--- a/index.html
+++ b/index.html
@@ -6,9 +6,11 @@
     <body>
         <center>
             <h1>Website!</h1>
+           <marquee behavior="scroll" direction="left" scrollamount="20">
             <img src="pic3.jpeg" width="225px" height="225px">
+            </marquee>
         </center>
-        
+        <img src="pic6.png" width="275" height="180">
         <hr><br><br>
 
         <p>
