--- a/index.html
+++ b/index.html
@@ -6,11 +6,11 @@
     <body>
         <center>
             <h1>Website!</h1>
-           <marquee behavior="scroll" direction="left" scrollamount="20">
             <img src="pic3.jpeg" width="225px" height="225px">
-            </marquee>
         </center>
+          <marquee behavior="scroll" direction="left" scrollamount="50">Neeeeom
         <img src="pic6.png" width="275" height="180">
+       </marquee>
         <hr><br><br>
 
         <p>
