--- a/index.html
+++ b/index.html
@@ -8,8 +8,8 @@
             <h1>Website!</h1>
             <img src="pic3.jpeg" width="225px" height="225px">
         </center>
-          <marquee behavior="scroll" direction="left" scrollamount="50">Neeeeom
-        <img src="pic6.png" width="275" height="180">
+          <marquee behavior="scroll" direction="right" scrollamount="100">Neeeeom
+        <img src="pic7.png" width="300" height="170">
        </marquee>
         <hr><br><br>
 
