--- a/index.html
+++ b/index.html
@@ -14,18 +14,18 @@
         <hr><br><br>
 
         <p>
-            8/20/23 -<br> We created an acount on AWS and github. We also learned about OSHA and how to be safe when engineering.<br>We started coding today as you can see. We learned about the engineering process and how its simmilar to the scientific process
+            8/20/23-Week 1 <br> We created an acount on AWS and github. We also learned about OSHA and how to be safe when engineering.<br>We started coding today as you can see. We learned about the engineering process and how its simmilar to the scientific process
         </p>
         <br>
         <br>
 <p>
-    8/28/23- <br> We took the safety quiz today.We also did a worksheet on how inventions changed our way of living. We started tinkercad<br> at first we played around with all the tools and stuff then we started a challenge which was to make a household<br> appliance and I made a hair dryer. We also started desinging our Ruth goldberg machines.
+    8/28/23-Week 2 <br> We took the safety quiz today.We also did a worksheet on how inventions changed our way of living. We started tinkercad<br> at first we played around with all the tools and stuff then we started a challenge which was to make a household<br> appliance and I made a hair dryer. We also started desinging our Ruth goldberg machines.
 </p>
     <marquee behavior="scroll" direction="left" scrollamount="20">
     <img src="pic4.jpeg" width="300" height="200">
     </marquee>
 <p>
-    9/4/23- <br> We finshed our tinkercad Rube Goldberg machine using simple machines. We also finsihed our Mechanical engineering worksheet,<br> we also watched a crash couse on the history of engineering. We took a quiz on the mechanical engineering worksheet.
+    9/4/23-Week 3 <br> We finshed our tinkercad Rube Goldberg machine using simple machines. We also finsihed our Mechanical engineering worksheet,<br> we also watched a crash couse on the history of engineering. We took a quiz on the mechanical engineering worksheet.
 </p>
 <marquee behavior="scroll" direction="left" scrollamount="20">
 <img src="pic5.png" width="400" height="300">
