--- a/index.html
+++ b/index.html
@@ -30,6 +30,14 @@
 <marquee behavior="scroll" direction="left" scrollamount="20">
 <img src="pic5.png" width="400" height="300">
  </marquee>
+ <style>       
+    a{
+        cursor: url("pic8.png"), pointer;
+    }
+</style>
+ 
+ 
+ 
     </body>
 
 </html>
