--- a/index.html
+++ b/index.html
@@ -35,6 +35,11 @@
         cursor: url("pic8.png"), pointer;
     }
 </style>
+<script src="https://cdnjs.cloudflare.com/ajax/libs/jquery/3.3.1/jquery.min.js"></script>
+<div id="follow"><img src="pic8.png" />
+</div>
+
+
  
  
  
