--- a/index.html
+++ b/index.html
@@ -30,15 +30,12 @@
 <marquee behavior="scroll" direction="left" scrollamount="20">
 <img src="pic5.png" width="400" height="300">
  </marquee>
- <style>       
-    a{
-        cursor: url("pic8.png"), pointer;
-    }
-</style>
-<script src="https://cdnjs.cloudflare.com/ajax/libs/jquery/3.3.1/jquery.min.js"></script>
-<div id="follow"><img src="pic8.png" />
-</div>
-
+<p>
+    9/11/23 Week 4 <br> We started creating the Rube Goldberg machine with cardboard and got really far. We finished our machine and it popped our<br> ballon. We  used these three simple machines like Lever,inclined plane, and wheels and axel. It was a challenge<br> making the tinkercad into real life.
+</p>
+<video width="900" height="600" controls="" loop="">
+    <source src="vid1.mov" type="video/mp4"
+</video>
 
  
  
