--- a/index.html
+++ b/index.html
@@ -33,8 +33,8 @@
 <p>
     9/11/23 Week 4 <br> We started creating the Rube Goldberg machine with cardboard and got really far. We finished our machine and it popped our<br> ballon. We  used these three simple machines like Lever,inclined plane, and wheels and axel. It was a challenge<br> making the tinkercad into real life.
 </p>
-<video width="900" height="600" controls="" loop="">
-    <source src="vid1.mov" type="video/mp4"
+<video width="600" height="300" controls="" loop="">
+    <source src="vid1.mp4" type="video/mp4"
 </video>
 
  
