--- a/index.html
+++ b/index.html
@@ -16,8 +16,6 @@
         <p>
             8/20/23-Week 1 <br> We created an acount on AWS and github. We also learned about OSHA and how to be safe when engineering.<br>We started coding today as you can see. We learned about the engineering process and how its simmilar to the scientific process
         </p>
-        <br>
-        <br>
 <p>
     8/28/23-Week 2 <br> We took the safety quiz today.We also did a worksheet on how inventions changed our way of living. We started tinkercad<br> at first we played around with all the tools and stuff then we started a challenge which was to make a household<br> appliance and I made a hair dryer. We also started desinging our Ruth goldberg machines.
 </p>
@@ -34,7 +32,7 @@
     9/11/23 Week 4 <br> We started creating the Rube Goldberg machine with cardboard and got really far. We finished our machine and it popped our<br> ballon. We  used these three simple machines like Lever,inclined plane, and wheels and axel. It was a challenge<br> making the tinkercad into real life.
 </p>
 <video width="600" height="300" controls="" loop="">
-    <source src="vid1.mp4" type="video/mp4"
+    <source src="vid1.mp4" type="video/mp4">
 </video>
 <p>
     9/18/23-Week 5 <br> On Monday we reviewed how to add videos into our website. On Tuesday we did two challenges, the first one was you had to build a boat<br> only using paper and tape, mine lasted two minutes and 40 seconds. My boat was shell shaped and floated.<br>The second challenge was we had at design an E by adding measurements then someone else would make it. We started a worksheet about computer engineering.
