--- a/index.html
+++ b/index.html
@@ -40,7 +40,13 @@
 <marquee behavior="scroll" direction="left" scrollamount="20">
 <img src="pic9.jpeg" width="400" height="300">
  </marquee>
-
+<p>
+    9/25/23-Week 6 <br> We disected a computer and learned about the different parts like the CPU(Central processing unit), motherboard, cooling system<br>, and GPU(Graphical processing unit) the CPU usually is the part that does the "computing" taking in an input and spewwing<br> an output, the motherboard is the circuitry tha powers or tells what, and when to do. The GPU is what creates your FPS or frames per second it is the graphical aspect of the computer.
+</p>
+   <marquee behavior="scroll" direction="left" scrollamount="20">
+<img src="pic10.jpeg" width="400" height="300">
+ </marquee>
+   
     </body>
 
 </html>
