--- a/index.html
+++ b/index.html
@@ -41,12 +41,17 @@
 <img src="pic9.jpeg" width="400" height="300">
  </marquee>
 <p>
-    9/25/23-Week 6 <br> We disected a computer and learned about the different parts like the CPU(Central processing unit), motherboard, cooling system<br>, and GPU(Graphical processing unit) the CPU usually is the part that does the "computing" taking in an input and spewwing<br> an output, the motherboard is the circuitry tha powers or tells what, and when to do. The GPU is what creates your FPS or frames per second it is the graphical aspect of the computer.
+    9/25/23-Week 6 <br> We disected a computer and learned about the different parts like the CPU(Central processing unit), motherboard, cooling system, and GPU(Graphical processing unit) the CPU usually is the part that does the "computing" taking in an input and spewwing<br> an output, the motherboard is the circuitry tha powers or tells what, and when to do. The GPU is what creates your FPS or frames per second it is the graphical aspect of the computer.
 </p>
    <marquee behavior="scroll" direction="left" scrollamount="20">
 <img src="pic10.jpeg" width="400" height="300">
  </marquee>
-   
+   <p>
+       10/2/23-Week 7 <br> We learned about bioengineering and how it is the same and or different from mechanical engineering, we also did a worksheet because of the slides. we created a hand prothestic using cardboard and string.Our hand worked but it only worked once.<br> We also created a tinkercad about a prothestic for an animal I created a leg prothesic for a Secratary bird.
+   </p>
+     <marquee behavior="scroll" direction="left" scrollamount="20">
+<img src="pic11.png" width="400" height="300">
+ </marquee>
     </body>
 
 </html>
