--- a/index.html
+++ b/index.html
@@ -52,6 +52,13 @@
      <marquee behavior="scroll" direction="left" scrollamount="20">
 <img src="pic11.png" width="400" height="300">
  </marquee>
+    <p>
+        10/9/23-Week 8 <br> We started to learn about areospace engineering, it is engineering that is for planes, rockets, missiles, and satalettes literary anything that is in the air. We tinkercaded a 3d design for a rocket/planes that will be launch with air pressure.
+    </p>
+    <marquee behavior="scroll" direction="left" scrollamount="20">
+<img src="pic12.png" width="400" height="300">
+ </marquee>
+    
     </body>
 
 </html>
