--- a/index.html
+++ b/index.html
@@ -47,18 +47,32 @@
 <img src="pic10.jpeg" width="400" height="300">
  </marquee>
    <p>
-       10/2/23-Week 7 <br> We learned about bioengineering and how it is the same and or different from mechanical engineering, we also did a worksheet because of the slides. we created a hand prothestic using cardboard and string.Our hand worked but it only worked once.<br> We also created a tinkercad about a prothestic for an animal I created a leg prothesic for a Secratary bird.
+       10/2/23-Week 7 <br> We learned about bioengineering and how it is the same and or different from mechanical engineering, we also did a worksheet because of the slides. we created a hand prothestic using cardboard and string.Our hand worked but it only worked once. We also created a tinkercad about a prothestic for an animal I created a leg prothesic for a Secratary bird.
    </p>
      <marquee behavior="scroll" direction="left" scrollamount="20">
 <img src="pic11.png" width="400" height="300">
  </marquee>
     <p>
-        10/9/23-Week 8 <br> We started to learn about areospace engineering, it is engineering that is for planes, rockets, missiles, and satalettes literary anything that is in the air. We tinkercaded a 3d design for a rocket/planes that will be launch with air pressure.
+        10/9/23-Week 8 <br> We started to learn about areospace engineering, it is engineering that is for planes, rockets, missiles, and satalettes literary anything that is in the air. We tinkercaded a 3d design for a rocket/planes that will be launch with air pressure. I chose this design because I have seen it in real life and i chose the pointy apex because it will be more aerodinamic.
     </p>
     <marquee behavior="scroll" direction="left" scrollamount="20">
 <img src="pic12.png" width="400" height="300">
  </marquee>
-    
+    <p>
+        10/16/23-Week 9 <br> We created the bottle rocket we designed in tinkercad. Then we tested it but I was not there so I couldn't do it 
+    </p>
+    <marquee behavior="scroll" direction="right" scrollamount="20">
+<img src="pic12.png" width="400" height="300">
+ </marquee>
+        <p>
+        10/23/23-Week 10 <br> We learned about environmental engineering, it is about keeping us health by providing clean water and other items. We created a water filter made of cotton, rocks, sand, pebbles and coke bottles the first layer was made of cotton then sand then pebbles then rocks. Our filtered water was piss yellow.
+    </p>
+    <marquee behavior="scroll" direction="left" scrollamount="20">
+<img src="pic13.jpg" width="400" height="300">
+ </marquee>
+    <p>
+        10/30/23-Week 11 <br> We learned about electrical engineering, it is about makung circits and makes electrical appliances. We learned about ressistance, current, voltage. We created different curcits in tinkercad by looking at the schematic one was a series circit and the other a with a parrallel.
+        </p>
     </body>
 
 </html>
