--- a/index.html
+++ b/index.html
@@ -73,6 +73,12 @@
     <p>
         10/30/23-Week 11 <br> We learned about electrical engineering, it is about makung circits and makes electrical appliances. We learned about ressistance, current, voltage. We created different curcits in tinkercad by looking at the schematic one was a series circit and the other a with a parrallel.
         </p>
+     <marquee behavior="scroll" direction="left" scrollamount="20">
+<img src="pic14.png" width="400" height="300">
+ </marquee>
+     <p>
+        11/6/23-Week 12 <br> We created the circuits we made in tinkercad to a real life breadboard it was pretty easy because I understood how the breadboards worked,A challenge I faced was somtimes the wires would not go in, and i was scared to push in the wires harder because i thought it might break
+        </p>
     </body>
 
 </html>
