--- a/index.html
+++ b/index.html
@@ -79,6 +79,16 @@
      <p>
         11/6/23-Week 12 <br> We created the circuits we made in tinkercad to a real life breadboard it was pretty easy because I understood how the breadboards worked,A challenge I faced was somtimes the wires would not go in, and i was scared to push in the wires harder because i thought it might break
         </p>
+    <marquee behavior="scroll" direction="left" scrollamount="20">
+<img src="pic15.png" width="400" height="300">
+ </marquee>
+    <p>
+    11/13/23-Week 13 <br> We learned about Business engineering what is about ethics and how money is managed, it is also is how ideas for businesses are made like shark tank. Our first idea was a license plate flipper so it would change your license plate to a different on so they can't tract it but then you said they had to be legal so we got stumped.
+        </p>
+    <marquee behavior="scroll" direction="left" scrollamount="20">
+<img src="pic16.jpeg" width="400" height="300">
+ </marquee>
     </body>
+
 
 </html>
