--- a/index.html
+++ b/index.html
@@ -88,6 +88,12 @@
     <marquee behavior="scroll" direction="left" scrollamount="20">
 <img src="pic16.jpeg" width="400" height="300">
  </marquee>
+   <p>
+    11/27/23-Week 14 <br> We presented our Shark Tank idea which was a childless airline which would only permit people over the age of 18 to board. We asked for 150 million dollars for 40% of the company because a commercial plane cost about 50 million.
+        </p>
+   <marquee behavior="scroll" direction="left" scrollamount="20">
+<img src="pic17.png" width="400" height="300">
+ </marquee>
     </body>
 
 
