--- a/index.html
+++ b/index.html
@@ -94,6 +94,37 @@
    <marquee behavior="scroll" direction="left" scrollamount="20">
 <img src="pic17.png" width="400" height="300">
  </marquee>
+     <p>
+    12/4/23-Week 15 <br> 
+    <ol type="1">
+    1. What was the weight of your bridge? <br><li>ANSWER</li><br>
+   2. What was the weight held by your bridge? <br><li>ANSWER</li><br>
+   3. What was the ratio of weight of bridge to weight held?<br><li>ANSWER</li><br>
+   4. What was the heaviest part of your bridge? What contributed most to the weight?<br><li>The part that contributed the most amount of weight was the "support triangles" which were double layered to insure maximum strength.The doubling of the spagetti added more weight while alos adding a bit of more strength.</li><br>
+   5. Where did the design of your bridge come from? Inspiration? Research? <br><li>Our design inspiration was from a Howe Truss bridge. Which taught us that there are subtypes of types like 6 main bridge types and each of those have their own versions for the same bridge.</li><br>
+   6. Did the design work as intended? Better? Worse?<br><li>Our design worked better than we thought because at the start we thought it wouldn't even hold one cup of water for how thin it was, we thought it would snap almost instantly.</li><br>
+   7. What was the point of failure of your bridge? Was that the expected weakest point?<br><li>The point of failure was where the bucket was hung and a few inches away from where I held it. We expected the bucket holder place to be the weakest but we didn't plan for it to snap from where I held it. The place I held it from was also double layered so we thought it wouldn't break but it still snapped, but it also happened to the other side. </li><br>
+   8. What can you do to improve your bridge? What can prolong points of failure?<br><li>If we had more spagetti we could have double layered everything and fixed the cross sections that broke while taking it off the sheet. We could have been more careful while prying it off the sheet. We could have also used more glue we were scared to use more because we thought we had too much, but when we saw the other teams which had glue bridges, but it was too late we couldn't glue it and dry it in time.</li><br>
+    </ol>
+        </p>
+     <p>
+    1/8/24 Sem2 Week 1 <br> We learned about chemical engineering which close to but not the same as a chemestry major, the difference is that chemical engineering focuses on expanding the chemical reaction to be mass produced in a factory like beer or other brands like that. While chemestry majors focus on creating new items useing chemicals with small reaction in a lab. We also made oobleck which is cornstrach mixed with water at the right pace and speed to reate a non-newtonian fluid
+        </p>
+   <marquee behavior="scroll" direction="left" scrollamount="20">
+<img src="pic18.jpeg" width="400" height="300">
+ </marquee>
+   <p>
+    1/15/24 Sem2 Week 2 <br> We started the proposal for our arduino car I wrote the description that we used electrical engineering, and mechanical engineering to create a design. We also did a BOM which are what materials you will be using. Our idea of our arduino car is two wheeled with a omnidirectional wheel in the back.
+        </p>
+   <marquee behavior="scroll" direction="left" scrollamount="20">
+<img src="pic19.png" width="400" height="300">
+ </marquee>
+   <p>
+    1/22/24 Sem2 Week 3 <br> We started doing the coding and the wireing which is going great because we got the wheels to spin for 2 seconds clockwise and counterclockwise and then stop, but the wheels can't work at the same time because the chromebook doesn't have enough power to make both work. We are hoping to make the chasis and finish wiring and coding.
+        </p>
+  <marquee behavior="scroll" direction="left" scrollamount="20">
+<img src="pic20.png" width="400" height="300">
+ </marquee>
     </body>
 
 
