--- a/index.html
+++ b/index.html
@@ -125,7 +125,17 @@
   <marquee behavior="scroll" direction="left" scrollamount="20">
 <img src="pic20.png" width="400" height="300">
  </marquee>
+<p>
+    1/29/24 Sem2 Week 4 <br> 
+        </p>
+<marquee behavior="scroll" direction="left" scrollamount="20">
+<img src="pic21.jpg" width="400" height="300">
+ </marquee>
+    <p>
+    2/5/24 Sem2 Week 5 <br> 
+        </p>
+    <video width="600" height="300" controls="" loop="">
+    <source src="vid2.mov" type="video/mov">
+</video>
     </body>
-
-
 </html>
