--- a/index.html
+++ b/index.html
@@ -135,7 +135,7 @@
     2/5/24 Sem2 Week 5 <br> 
         </p>
     <video width="600" height="300" controls="" loop="">
-    <source src="vid2.mov" type="video/mov">
+    <source src="vid2MOV" type="video/mp4">
 </video>
     </body>
 </html>
